RESOLVED FIXED47396
[chromium] Fix indentation in ChromiumDataObject.h
https://bugs.webkit.org/show_bug.cgi?id=47396
Summary [chromium] Fix indentation in ChromiumDataObject.h
Daniel Cheng
Reported 2010-10-07 20:22:43 PDT
Just a cleanup patch to make followup diffs smaller.
Attachments
Patch (7.14 KB, patch)
2010-10-07 22:55 PDT, Daniel Cheng
no flags
Daniel Cheng
Comment 1 2010-10-07 22:55:42 PDT
WebKit Commit Bot
Comment 2 2010-10-07 23:36:41 PDT
Comment on attachment 70204 [details] Patch Clearing flags on attachment: 70204 Committed r69380: <http://trac.webkit.org/changeset/69380>
WebKit Commit Bot
Comment 3 2010-10-07 23:36:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.