2010-10-07  Daniel Cheng  <dcheng@chromium.org>

Reviewed by Kent Tamura.

        [chromium] Fix indentation in ChromiumDataObject.h
        https://bugs.webkit.org/show_bug.cgi?id=47396

        Just a cleanup patch to make followup diffs smaller.

        * platform/chromium/ChromiumDataObject.h:
        (WebCore::ChromiumDataObject::create):
        (WebCore::ChromiumDataObject::copy):
        (WebCore::ChromiumDataObject::urlTitle):
        (WebCore::ChromiumDataObject::setUrlTitle):
        (WebCore::ChromiumDataObject::htmlBaseUrl):
        (WebCore::ChromiumDataObject::setHtmlBaseUrl):
        (WebCore::ChromiumDataObject::containsFilenames):
        (WebCore::ChromiumDataObject::filenames):
        (WebCore::ChromiumDataObject::setFilenames):
        (WebCore::ChromiumDataObject::fileExtension):
        (WebCore::ChromiumDataObject::setFileExtension):
        (WebCore::ChromiumDataObject::fileContentFilename):
        (WebCore::ChromiumDataObject::setFileContentFilename):
        (WebCore::ChromiumDataObject::fileContent):
        (WebCore::ChromiumDataObject::setFileContent):

Canonical link: https://commits.webkit.org/59981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69380 268f45cc-cd09-0410-ab3c-d52691b4dbfc